# OpenGLFPS

./: .gitignore  CMakeLists.txt  Dockerfile  devLog.md  readme.md
include/glad/: glad.h
src/: glad.c  main.cpp
